# basics

./: .pre-commit-config.yaml  pyproject.toml
.dvc/: config
basics/: data.py  evaluate.py  featurization.py  prepare.py  train.py
data/: .gitignore  gender_submission.csv.dvc  test.csv.dvc  train.csv.dvc
tests/: test_basics.py
