[tool.poetry]
name = "basics"
version = "0.1.0"
description = ""
authors = ["Taylor Beever <taybeever@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^1.10.1"
boto3 = "^1.16.24"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
